New spotify button look

--- a/website/index.html
+++ b/website/index.html
@@ -51,11 +51,10 @@
             >
 
             <div id="spotify-login">
-                <a href="/spotify">
-                    <button id="spotify-button" style="margin-bottom: 20px;">
-                        Login with Spotify
-                    </button></a
+                <a href="/spotify" id="spotify-login-button"
+                    >Login with Spotify</a
                 >
+
                 Only the host needs to login
             </div>
         </div>
