--- a/website/index.html
+++ b/website/index.html
@@ -59,9 +59,9 @@
 			</div>
 		</div>
 
+		<canvas id="canvas" width="0" height="0"></canvas>
 		<span id="room-status"></span>
 		<div id="youtube-player"">
-
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
 		<script src="js/gradient.js"></script>
 		<script src="js/main.js"></script>
