--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,7 @@
 
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<link rel="icon" href="img/icon_250.png" />
+	<link rel="manifest" href="js/manifest.json">
 	<link rel="manifest" href="js/manifest.webmanifest" />
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -18,6 +19,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
 
@@ -51,8 +53,9 @@
 		<span id="room-code-website">party.ygstr.com</span>
 	</div>
 	<div id="youtube-player"">
-		<script src=" https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"> </script> <script
-		src="js/gradient.js">
+		<script src=" https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js">
+		</script>
+		<script src="js/gradient.js">
 		</script>
 		<script src="js/main.js"></script>
 		<script src="js/client.js"></script>
